welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:5: error: Int does not take parameters
		S = S + T(c);
                         ^