welcome.lessons.welcome.array.averagevalue.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
	var T = nums.length;
	var S = 0;
	for(c<- 0 to (T-1)){
		S = S + T(c);
	}
	return S/T
}
